--- a/.github/workflows/build_main_documentation.yml
+++ b/.github/workflows/build_main_documentation.yml
@@ -67,12 +67,6 @@ jobs:
           pip install black
           cd ..
 
-      - name: Create build directory
-        run: |
-          mkdir -p build_dir/optimum
-          cd build_dir/optimum
-          wget https://huggingface.co/datasets/hf-doc-build/doc-build/raw/main/optimum/_versions.yml
-
       - name: Make Graphcore documentation
         run: |
           cd optimum-graphcore
@@ -98,6 +92,9 @@ jobs:
         run: |
           sudo docker system prune -a -f
           cd optimum
+          mkdir -p optimum-doc-build/optimum && cd optimum-doc-build/optimum
+          wget https://huggingface.co/datasets/hf-doc-build/doc-build/raw/main/optimum/_versions.yml
+          cd ../..
           make doc BUILD_DIR=optimum-doc-build VERSION=${{ env.VERSION }} COMMIT_SHA_OPTIMUM=${{ env.VERSION }}
           cd ..
 
@@ -105,12 +102,11 @@ jobs:
         run: |
           cd optimum
           sudo python docs/combine_docs.py --subpackages graphcore habana intel --version ${{ env.VERSION }}
-          sudo cp -r optimum-doc-build/optimum/${{ env.VERSION }} ../build_dir/optimum
           cd ..
 
       - name: Push to repositories
         run: |
-          cd build_dir
+          cd optimum/optimum-doc-build
           chmod ugo+rwx optimum
           doc-builder push optimum --doc_build_repo_id "hf-doc-build/doc-build" --token "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" --commit_msg "Updated with commit ${{ github.sha }} See: https://github.com/huggingface/optimum/commit/${{ github.sha }}" --n_retries 5 --upload_version_yml
         shell: bash
