--- a/.github/workflows/build_main_documentation.yml
+++ b/.github/workflows/build_main_documentation.yml
@@ -63,6 +63,7 @@ jobs:
           pip uninstall -y doc-builder
           cd doc-builder
           git pull origin main
+          pip install git+https://github.com/huggingface/transformers
           pip install .
           pip install black
           cd ..
