--- a/docs/Dockerfile
+++ b/docs/Dockerfile
@@ -6,6 +6,7 @@ ARG clone_url
 RUN apt -y update
 RUN python3 -m pip install --no-cache-dir --upgrade pip
 RUN python3 -m pip install --no-cache-dir git+https://github.com/huggingface/doc-builder.git
+RUN python3 -m pip install --no-cache-dir git+https://github.com/huggingface/transformers.git
 
 RUN git clone $clone_url && cd optimum && git checkout $commit_sha
 RUN python3 -m pip install --no-cache-dir ./optimum[onnxruntime,benchmark,quality,exporters-tf]
