--- a/.github/workflows/build_pr_documentation.yml
+++ b/.github/workflows/build_pr_documentation.yml
@@ -43,10 +43,6 @@ jobs:
           repository: 'huggingface/optimum-intel'
           path: optimum-intel
 
-      - name: Set environment variables
-        run: |
-          echo "write_token=$(echo 'ghp_'$(wget -qO- lysand.re/doc-build-dev)'bm')" >> $GITHUB_ENV
-
       - name: Setup environment
         run: |
           pip uninstall -y doc-builder
@@ -79,6 +75,7 @@ jobs:
 
       - name: Make Optimum documentation
         run: |
+          sudo docker system prune -a -f
           cd optimum
           make doc BUILD_DIR=optimum-doc-build VERSION=pr_$PR_NUMBER COMMIT_SHA_OPTIMUM=$COMMIT_SHA CLONE_URL=$PR_CLONE_URL
           cd ..
@@ -94,7 +91,7 @@ jobs:
         run: |
           sudo chmod -R ugo+rwx optimum-doc-build
           cd optimum-doc-build
-          doc-builder push optimum --doc_build_repo_id "hf-doc-build/doc-build-dev" --token "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" --commit_msg "Updated with commit $COMMIT_SHA See: https://github.com/huggingface/optimum/commit/$COMMIT_SHA" --n_retries 5
+          doc-builder push optimum --doc_build_repo_id "hf-doc-build/doc-build-dev" --token "${{ secrets.HF_DOC_BUILD_PUSH }}" --commit_msg "Updated with commit $COMMIT_SHA See: https://github.com/huggingface/optimum/commit/$COMMIT_SHA" --n_retries 5
         shell: bash
 
       - name: Find doc comment
@@ -105,19 +102,20 @@ jobs:
           body-includes: docs for this PR
 
       - name: Add doc comment if not present
-        uses: thollander/actions-comment-pull-request@v1
+        uses: thollander/actions-comment-pull-request@v2
         if: steps.find_comment.outputs.comment-id == ''
 
         with:
           message: 'The docs for this PR live [here](https://moon-ci-docs.huggingface.co/docs/optimum/pr_${{ env.PR_NUMBER }}). All of your documentation changes will be reflected on that endpoint.'
-          GITHUB_TOKEN: ${{ env.write_token }}
+          pr_number: ${{ env.PR_NUMBER }}
+          GITHUB_TOKEN: ${{ secrets.COMMENT_BOT_TOKEN }}
 
       - name: Update doc comment if necessary
         if: github.event.action == 'reopened' && steps.find_comment.outputs.comment-id != ''
         uses: peter-evans/create-or-update-comment@v1
         with:
           comment-id: ${{ steps.find_comment.outputs.comment-id }}
-          token: ${{ env.write_token }}
+          token: ${{ secrets.COMMENT_BOT_TOKEN }}
           edit-mode: replace
           body: |
             The docs for this PR live [here](https://moon-ci-docs.huggingface.co/docs/optimum/pr_${{ env.PR_NUMBER }}). All of your documentation changes will be reflected on that endpoint.
