check which version black ruff

--- a/.github/workflows/check_code_quality.yml
+++ b/.github/workflows/check_code_quality.yml
@@ -43,6 +43,7 @@ jobs:
         source venv/bin/activate
         pip install --upgrade pip
         pip install .[quality]
+        pip freeze
     - name: Check style with black
       run: |
         source venv/bin/activate
