--- a/.github/workflows/build_pr_documentation.yml
+++ b/.github/workflows/build_pr_documentation.yml
@@ -87,35 +87,14 @@ jobs:
           sudo mv optimum-doc-build ../
           cd ..
 
-      - name: Push to repositories
+      - name: Save commit_sha & pr_number
         run: |
           sudo chmod -R ugo+rwx optimum-doc-build
           cd optimum-doc-build
-          doc-builder push optimum --doc_build_repo_id "hf-doc-build/doc-build-dev" --token "${{ secrets.HF_DOC_BUILD_PUSH }}" --commit_msg "Updated with commit $COMMIT_SHA See: https://github.com/huggingface/optimum/commit/$COMMIT_SHA" --n_retries 5
-        shell: bash
+          echo ${{ env.COMMIT_SHA }} > ./commit_sha
+          echo ${{ env.PR_NUMBER }} > ./pr_number
 
-      - name: Find doc comment
-        uses: peter-evans/find-comment@v2
-        id: find_comment
+      - uses: actions/upload-artifact@v3
         with:
-          issue-number: ${{ env.PR_NUMBER }}
-          body-includes: docs for this PR
-
-      - name: Add doc comment if not present
-        uses: thollander/actions-comment-pull-request@v2
-        if: steps.find_comment.outputs.comment-id == ''
-
-        with:
-          message: 'The docs for this PR live [here](https://moon-ci-docs.huggingface.co/docs/optimum/pr_${{ env.PR_NUMBER }}). All of your documentation changes will be reflected on that endpoint.'
-          pr_number: ${{ env.PR_NUMBER }}
-          GITHUB_TOKEN: ${{ secrets.COMMENT_BOT_TOKEN }}
-
-      - name: Update doc comment if necessary
-        if: github.event.action == 'reopened' && steps.find_comment.outputs.comment-id != ''
-        uses: peter-evans/create-or-update-comment@v1
-        with:
-          comment-id: ${{ steps.find_comment.outputs.comment-id }}
-          token: ${{ secrets.COMMENT_BOT_TOKEN }}
-          edit-mode: replace
-          body: |
-            The docs for this PR live [here](https://moon-ci-docs.huggingface.co/docs/optimum/pr_${{ env.PR_NUMBER }}). All of your documentation changes will be reflected on that endpoint.
+          name: doc-build-artifact
+          path: optimum-doc-build/
