Update ORT training docker to 1.15 (#1139)
* update docker files

* update trainer test dockerfile

--- a/examples/onnxruntime/training/docker/Dockerfile-ort1.15.1-cu118
+++ b/examples/onnxruntime/training/docker/Dockerfile-ort1.15.1-cu118
@@ -71,9 +71,6 @@ ENV TORCH_CUDA_ARCH_LIST="5.2 6.0 6.1 7.0 7.5 8.0 8.6+PTX"
 RUN $PYTHON_EXE -m pip install --upgrade protobuf==3.20.2
 RUN $PYTHON_EXE -m torch_ort.configure
 
-# Install Optimum
-COPY . /workspace/optimum
-RUN pip install /workspace/optimum[tests]
+WORKDIR .
 
-ENV TEST_LEVEL=1
-CMD RUN_SLOW=1 pytest -v -rs onnxruntime/nightly_test_trainer.py --durations=0
+CMD ["/bin/bash"]
