--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,6 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
-[tool.black]
-line-length = 119
-target-version = ['py37']
-
 [tool.ruff]
 # Never enforce `E501` (line length violations).
 ignore = ["C901", "E501", "E741", "W605"]
@@ -40,3 +36,47 @@ markers = [
     "fp16",
     "quantization",
 ]
+
+# FuriosaAI pyproject.toml
+[tool.black]
+line-length = 100
+
+[tool.isort]
+force_sort_within_sections = true
+known_first_party = ['furiosa']
+line_length = 100
+profile = 'black'
+
+[[tool.mypy.overrides]]
+module = [
+    'PIL.*',
+    'cv2.*',
+    'onnx.*', # https://github.com/onnx/onnx/pull/3939
+    'tf2onnx.*',
+    'torchvision.*', # https://github.com/pytorch/vision/issues/2025
+    'tqdm.*',
+]
+ignore_missing_imports = true
+
+[tool.pylint.format]
+max-line-length = 100
+
+[tool.pylint.master]
+load-plugins = ['pylint_protobuf']
+
+[tool.pylint.message_control]
+disable = [
+    # Warning
+    'fixme', # W0511
+
+    # Convention
+    'line-too-long', # C0301
+    'missing-function-docstring', # C0116
+    'missing-module-docstring', # C0114
+
+    # Refactor
+    'duplicate-code', # R0801
+]
+
+[tool.pylint.typecheck]
+generated-members =['cv2.*', 'torch.*']
