--- a/examples/onnxruntime/training/stable-diffusion/text-to-image/requirements.txt
+++ b/examples/onnxruntime/training/stable-diffusion/text-to-image/requirements.txt
@@ -1,7 +1,7 @@
 accelerate>=0.16.0
-torchvision
 transformers>=4.25.1
 datasets
+git+https://github.com/huggingface/diffusers
 ftfy
 tensorboard
 Jinja2
