--- a/.github/workflows/build_main_documentation.yml
+++ b/.github/workflows/build_main_documentation.yml
@@ -40,11 +40,6 @@ jobs:
 
       - uses: actions/checkout@v2
         with:
-          repository: 'huggingface/optimum-graphcore'
-          path: optimum-graphcore
-
-      - uses: actions/checkout@v2
-        with:
           repository: 'huggingface/optimum-intel'
           path: optimum-intel
 
@@ -69,13 +64,6 @@ jobs:
           git pull origin main
           pip install .
           pip install black
-          cd ..
-
-      - name: Make Graphcore documentation
-        run: |
-          cd optimum-graphcore
-          make doc BUILD_DIR=graphcore-doc-build VERSION=${{ env.VERSION }}
-          sudo mv graphcore-doc-build ../optimum
           cd ..
 
       - name: Make Habana documentation
@@ -105,7 +93,7 @@ jobs:
       - name: Combine subpackage documentation
         run: |
           cd optimum
-          sudo python docs/combine_docs.py --subpackages graphcore habana intel neuron --version ${{ env.VERSION }}
+          sudo python docs/combine_docs.py --subpackages habana intel neuron --version ${{ env.VERSION }}
           cd ..
 
       - name: Push to repositories
