--- a/.github/workflows/build_pr_documentation.yml
+++ b/.github/workflows/build_pr_documentation.yml
@@ -57,6 +57,30 @@ jobs:
           pip install black
           cd ..
 
+      - name: Make Graphcore documentation
+        run: |
+          sudo docker system prune -a -f
+          cd optimum-graphcore
+          make doc BUILD_DIR=graphcore-doc-build VERSION=pr_$PR_NUMBER
+          sudo mv graphcore-doc-build ../optimum
+          cd ..
+
+      - name: Make Habana documentation
+        run: |
+          sudo docker system prune -a -f
+          cd optimum-habana
+          make doc BUILD_DIR=habana-doc-build VERSION=pr_$PR_NUMBER
+          sudo mv habana-doc-build ../optimum
+          cd ..
+
+      - name: Make Intel documentation
+        run: |
+          sudo docker system prune -a -f
+          cd optimum-intel
+          make doc BUILD_DIR=intel-doc-build VERSION=pr_$PR_NUMBER
+          sudo mv intel-doc-build ../optimum
+          cd ..
+
       - name: Make Furiosa documentation
         run: |
           cd optimum-furiosa
@@ -76,27 +100,6 @@ jobs:
           sudo apt update && sudo apt install -y furiosa-libnux
           doc-builder build optimum.furiosa docs/source/ --build_dir furiosa-doc-build --version pr_$PR_NUMBER --version_tag_suffix "" --html --clean
           mv furiosa-doc-build ../optimum
-          cd ..
-
-      - name: Make Graphcore documentation
-        run: |
-          cd optimum-graphcore
-          make doc BUILD_DIR=graphcore-doc-build VERSION=pr_$PR_NUMBER
-          sudo mv graphcore-doc-build ../optimum
-          cd ..
-
-      - name: Make Habana documentation
-        run: |
-          cd optimum-habana
-          make doc BUILD_DIR=habana-doc-build VERSION=pr_$PR_NUMBER
-          sudo mv habana-doc-build ../optimum
-          cd ..
-
-      - name: Make Intel documentation
-        run: |
-          cd optimum-intel
-          make doc BUILD_DIR=intel-doc-build VERSION=pr_$PR_NUMBER
-          sudo mv intel-doc-build ../optimum
           cd ..
 
       - name: Make Optimum documentation
