--- a/.github/workflows/build_pr_documentation.yml
+++ b/.github/workflows/build_pr_documentation.yml
@@ -59,7 +59,6 @@ jobs:
 
       - name: Make Graphcore documentation
         run: |
-          sudo docker system prune -a -f
           cd optimum-graphcore
           make doc BUILD_DIR=graphcore-doc-build VERSION=pr_$PR_NUMBER
           sudo mv graphcore-doc-build ../optimum
@@ -112,7 +111,7 @@ jobs:
       - name: Combine subpackage documentation
         run: |
           cd optimum
-          sudo python docs/combine_docs.py --subpackages graphcore habana intel furiosa neuron --version pr_$PR_NUMBER
+          sudo python docs/combine_docs.py --subpackages graphcore habana intel neuron furiosa --version pr_$PR_NUMBER
           sudo mv optimum-doc-build ../
           cd ..
 
