--- a/.github/workflows/test_export_onnx_cli.yml
+++ b/.github/workflows/test_export_onnx_cli.yml
@@ -27,6 +27,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies for pytorch export
       run: |
+        pip install git+https://github.com/huggingface/diffusers
         pip install .[tests,exporters]
     - name: Test with unittest
       working-directory: tests
