--- a/.github/workflows/test_onnxruntime.yml
+++ b/.github/workflows/test_onnxruntime.yml
@@ -29,6 +29,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
+        pip install git+https://github.com/huggingface/diffusers
         pip install .[tests,onnxruntime]
     - name: Test with pytest
       working-directory: tests
