--- a/docs/source/_toctree.yml
+++ b/docs/source/_toctree.yml
@@ -127,7 +127,7 @@
   isExpanded: false
 - sections:
   - local: optimization_toolbox/usage_guides/quantization
-    title: How to quantize model ?
+    title: GPTQ quantization
   title: Optimization toolbox
   isExpanded: false
 - sections:
