--- a/.github/workflows/build_main_documentation.yml
+++ b/.github/workflows/build_main_documentation.yml
@@ -68,7 +68,7 @@ jobs:
           pip uninstall -y doc-builder
           cd doc-builder
           git pull origin main
-          pip install .[doc-build]
+          pip install .
           pip install black
           cd ..
 
@@ -120,6 +120,7 @@ jobs:
         run: |
           sudo docker system prune -a -f
           cd optimum
+          pip install .[doc-build]
           mkdir -p optimum-doc-build/optimum && cd optimum-doc-build/optimum
           wget https://huggingface.co/datasets/hf-doc-build/doc-build/raw/main/optimum/_versions.yml
           cd ../..
