--- a/.github/workflows/build_pr_documentation.yml
+++ b/.github/workflows/build_pr_documentation.yml
@@ -53,7 +53,7 @@ jobs:
           pip uninstall -y doc-builder
           cd doc-builder
           git pull origin main
-          pip install .[doc-build]
+          pip install .
           pip install black
           cd ..
 
@@ -105,6 +105,7 @@ jobs:
         run: |
           sudo docker system prune -a -f
           cd optimum
+          pip install .[doc-build]
           make doc BUILD_DIR=optimum-doc-build VERSION=pr_$PR_NUMBER COMMIT_SHA_OPTIMUM=$COMMIT_SHA CLONE_URL=$PR_CLONE_URL
           cd ..
 
