--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -58,13 +58,10 @@ body:
         If you have code snippets, error messages, stack traces please provide them here as well.
         Important! Use code tags to correctly format your code. See https://help.github.com/en/github/writing-on-github/creating-and-highlighting-code-blocks#syntax-highlighting
         Do not use screenshots, as they are hard to read and (more importantly) don't allow others to copy-and-paste your code.
+        Providing a **minimal**, **reproducible** reproduction using a **publicly available model** significantly increase the chances of a fix in a timely manner.
 
       placeholder: |
-        Steps to reproduce the behavior:
-
-          1.
-          2.
-          3.
+        Providing a minimal, reproducible reproduction using a publicly available model significantly increase the chances of a fix in a timely manner.
 
 
   - type: textarea
