--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -52,7 +52,7 @@ body:
     validations:
       required: true
     attributes:
-      label: Reproduction
+      label: Reproduction (minimal, reproducible, runnable)
       description: |
         Please provide a code sample that reproduces the problem you ran into. It can be a Colab link or just a code snippet.
         If you have code snippets, error messages, stack traces please provide them here as well.
