--- a/.github/workflows/build_pr_documentation.yml
+++ b/.github/workflows/build_pr_documentation.yml
@@ -3,9 +3,11 @@ name: Build PR documentation
 # WARNING: As this workflow supports the pull_request_target event, please exercise extra care when editing it.
 
 on:
-  pull_request_target:
+  pull_request:
     branches: [ main ]
-    types: [ opened, synchronize, reopened, labeled ]
+#  pull_request_target:
+#    branches: [ main ]
+#    types: [ opened, synchronize, reopened, labeled ]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
