--- a/docs/Dockerfile
+++ b/docs/Dockerfile
@@ -5,9 +5,8 @@ ARG clone_url
 
 RUN apt -y update
 RUN python3 -m pip install --no-cache-dir --upgrade pip
-RUN python3 -m pip install --no-cache-dir git+https://github.com/huggingface/doc-builder.git
+RUN echo "aaa"
+RUN python3 -m pip install --no-cache-dir git+https://github.com/regisss/doc-builder.git@test_gptq_doc
 
-RUN git clone $clone_url && cd optimum && git checkout $commit_sha
-# PyTorch must be installed before auto-gptq is collected
-RUN python3 -m pip install torch
+RUN git clone https://github.com/huggingface/optimum.git && cd optimum && git checkout fix_doc_gptq
 RUN python3 -m pip install --no-cache-dir ./optimum[onnxruntime,benchmark,quality,exporters-tf,doc-build]
