Remove references in doc

--- a/docs/Dockerfile
+++ b/docs/Dockerfile
@@ -5,8 +5,7 @@ ARG clone_url
 
 RUN apt -y update
 RUN python3 -m pip install --no-cache-dir --upgrade pip
-RUN echo "aaa"
-RUN python3 -m pip install --no-cache-dir git+https://github.com/regisss/doc-builder.git@test_gptq_doc
+RUN python3 -m pip install --no-cache-dir git+https://github.com/huggingface/doc-builder.git
 
-RUN git clone https://github.com/huggingface/optimum.git && cd optimum && git checkout fix_doc_gptq
+RUN git clone $clone_url && cd optimum && git checkout $commit_sha
 RUN python3 -m pip install --no-cache-dir ./optimum[onnxruntime,benchmark,quality,exporters-tf,doc-build]
