--- a/.github/workflows/test_export_onnx_timm.yml
+++ b/.github/workflows/test_export_onnx_timm.yml
@@ -1,9 +1,7 @@
-name: Exporters ONNX / Python - Test
+name: Exporters Timm ONNX / Python - Test
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
     branches: [ main ]
 
 concurrency:
@@ -31,11 +29,5 @@ jobs:
     - name: Test with unittest
       working-directory: tests
       run: |
-        pytest exporters/onnx/test_onnx_*.py -s -n auto -m "not tensorflow_test and not timm_test" --durations=0
-    - name: Install dependencies for tensorflow export
-      run: |
-        pip install .[tests,exporters-tf]
-    - name: Test with unittest
-      working-directory: tests
-      run: |
-        pytest exporters/onnx/test_onnx_*.py -n auto -m "tensorflow_test" -s --durations=0
+        pytest exporters/onnx/test_onnx_*.py -s -n auto -m "timm_test" --durations=0
+
