update yml and fixerd test

--- a/.github/workflows/test_export_onnx_cli_timm.yml
+++ b/.github/workflows/test_export_onnx_cli_timm.yml
@@ -1,6 +1,7 @@
-name: Exporters ONNX CLI / Python - Test
+name: Exporters ONNX CLI Timm / Python - Test
 
 on:
+  workflow_dispatch:
   push:
     branches: [ main ]
 
