--- a/.github/workflows/test_export_onnx_timm.yml
+++ b/.github/workflows/test_export_onnx_timm.yml
@@ -1,6 +1,7 @@
-name: Exporters Timm ONNX / Python - Test
+name: Exporters ONNX Timm / Python - Test
 
 on:
+  workflow_dispatch:
   push:
     branches: [ main ]
 
