--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ known-first-party = ["optimum"]
 markers = [
     "gpu_test",
     "tensorflow_test",
+    "timm_test",
     "run_in_series",
     "run_slow",
     "accelerate_test",
