skip graphcore doc build

--- a/.github/workflows/build_main_documentation.yml
+++ b/.github/workflows/build_main_documentation.yml
@@ -34,10 +34,10 @@ jobs:
           repository: 'huggingface/optimum-habana'
           path: optimum-habana
 
-      - uses: actions/checkout@v2
-        with:
-          repository: 'huggingface/optimum-graphcore'
-          path: optimum-graphcore
+      #- uses: actions/checkout@v2
+        #with:
+          #repository: 'huggingface/optimum-graphcore'
+          #path: optimum-graphcore
 
       - uses: actions/checkout@v2
         with:
@@ -119,12 +119,12 @@ jobs:
           pip install black
           cd ..
 
-      - name: Make Graphcore documentation
-        run: |
-          cd optimum-graphcore
-          make doc BUILD_DIR=graphcore-doc-build VERSION=${{ env.VERSION }}
-          sudo mv graphcore-doc-build ../optimum
-          cd ..
+      #- name: Make Graphcore documentation
+        #run: |
+          #cd optimum-graphcore
+          #make doc BUILD_DIR=graphcore-doc-build VERSION=${{ env.VERSION }}
+          #sudo mv graphcore-doc-build ../optimum
+          #cd ..
 
       - name: Make Habana documentation
         run: |
@@ -184,7 +184,7 @@ jobs:
       - name: Combine subpackage documentation
         run: |
           cd optimum
-          sudo python docs/combine_docs.py --subpackages graphcore habana intel neuron furiosa amd --version ${{ env.VERSION }}
+          sudo python docs/combine_docs.py --subpackages habana intel neuron furiosa amd --version ${{ env.VERSION }}
           cd ..
 
       - name: Push to repositories
