Add redirection for Optimum TPU

--- a/docs/source/_redirects.yml
+++ b/docs/source/_redirects.yml
@@ -31,3 +31,4 @@ docs/optimum-neuron/index: /docs/optimum-neuron/index
 
 # Optimum TPU
 docs/optimum-tpu/index: /docs/optimum-tpu/index
+tpu/index: /docs/optimum-tpu/index
