Fix TPU doc build

--- a/.github/workflows/build_main_documentation.yml
+++ b/.github/workflows/build_main_documentation.yml
@@ -161,7 +161,7 @@ jobs:
           sudo docker system prune -a -f
           cd optimum-tpu
           pip install -U pip
-          pip install .
+          pip install . -f https://storage.googleapis.com/libtpu-releases/index.html
           doc-builder build optimum.tpu docs/source/ --build_dir tpu-doc-build --version pr_$PR_NUMBER --version_tag_suffix "" --html --clean
           mv tpu-doc-build ../optimum
           cd ..
